[tool.poetry]
name = "kungfu-docs"
version = "0.0.0"
description = "Kungfu Docs"
license = "Apache-2.0"
authors = ["Kungfu Trader <info@kungfu.link>"]
homepage = "https://www.kungfu-trader.com"
repository = "https://github.com/kungfu-trader/kungfu.git"
packages = [
    { include = "sphinx_kungfu_conf", from = "src/python" },
]

[tool.poetry.dependencies]
python = ">=3.9.0, <3.11"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
rinohtype = "^0.5.4"
rst2pdf = "^0.99"
semver = "^2.13.0"
sphinx = "^5.3.0"
sphinx_rtd_theme = "^1.0.0"
sphinx-rtd-dark-mode = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
